--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "template",
   "version": "0.1.0",
-  "homepage": "https://ZiadAhmed92.github.io/Games",
+  "homepage": "http://ZiadAhmed92.github.io/Games",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.0",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
